[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv-compliant data cleaning environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "openai==2.7.2",
    "requests==2.32.2",
    "python-dateutil==2.9.0",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
serve = "server:app"

[tool.setuptools.packages.find]
where = ["."]